Fix menu behaviour on mobile

--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -41,7 +41,7 @@ nav {
  position: absolute;
  top: 0;
  bottom: 0;
- left: -50vw;
+ left: -55vw;
  margin: 0;
  padding: 2rem;
  width: auto;
@@ -99,6 +99,12 @@ nav {
 /***
 *** MEDIA QUERIES
 ***/
+@media screen and (max-width: 768px) {
+  #menu-container input[type="checkbox"]:checked + label::before {
+    right: -40vw;
+  }
+}
+
 @media screen and (max-width: 479px) {
   #menu-container input[type="checkbox"]:checked ~ nav {
     min-width: 95vw;
@@ -111,7 +117,7 @@ nav {
   }
 
   nav {
-    left: -350px;
+    left: -480px;
     width: auto;
     min-width: 95vw;
     transition: left 250ms linear;
